--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 	<nav id="nav_bar">
 		<a href="index.html">Home</a>
-		<a href="#portfolio_container_new">Portfolio</a>
+		<a id="portfolio_link" href="#portfolio_container_new">Portfolio</a>
 		<a href="blog.html">Blog</a>
 		<a href="imgs/resume.pdf">Resume</a>
 		<a id="contact_link">Contact</a>
@@ -59,8 +59,16 @@
 				</div>
 			</div>
 		</a>
+		<a href="LucasJazzCorner.html" title="Lucas Jazz Corner">
+			<div class="portfolio_preview_updates green_blue">
+				<div class="portfolio_preview_bio">
+					<h2>Luca’s Jazz Corner</h2>
+					<p>A website I made for an emerging jazz club on the Upper East Side.</p>
+				</div>
+			</div>
+		</a>
 		<a href="wresq.html" title="">
-			<div class="portfolio_preview_updates proj1">
+			<div class="portfolio_preview_updates med_dark_gr_blue">
 				<div class="portfolio_preview_bio">
 					<h2>Law Firm Website</h2>
 					<p>Web Engineering and design work done for a law firm based in NYC</p>
@@ -68,7 +76,7 @@
 			</div>
 		</a>
 		<a href="iphone.html" title="">
-			<div class="portfolio_preview_updates proj2">
+			<div class="portfolio_preview_updates dark_green_blue">
 				<div class="portfolio_preview_bio">
 					<h2>iPhone Reproduction</h2>
 					<p>An interactive iPhone made with HTML, CSS, and JavaScript</p>
