--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<div class="portfolio_preview_updates green_blue">
 				<div class="portfolio_preview_bio">
 					<h2>Luca’s Jazz Corner</h2>
-					<p>A website I made for an emerging jazz club on the Upper East Side.</p>
+					<p>A website I designed for an emerging jazz club on the Upper East Side.</p>
 				</div>
 			</div>
 		</a>
