--- a/magazines.html
+++ b/magazines.html
@@ -34,7 +34,7 @@
 	</nav>
 	<div id="portfolio_container">
 		<h1 id="long_project_name_text">Magazine Layouts</h1>
-		<p id="project_description_text">Below are projects that I've completed in Graphic Design courses that I've enrolled in dealing with magazine spreads and layouts.</p>
+		<p id="project_description_text">Below are a few magazine spreads that I've created for graphic design classes I've taken at Baruch College.</p>
 		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/mag1.png" alt="Magazine Layout" />
 		<div class="fifty_spacer"></div>
