--- a/wresq.html
+++ b/wresq.html
@@ -46,7 +46,7 @@
 				<div class="portfolio_text_box align_right">
 					<p class="italic_courier">What it is</p>
 					<p>
-						William Ricigliano, P.C. is a Personal Injury Law Firm in Manhattan I have a special connection to. This is where I had my first job when I was 16 as a summer intern, where I did everything from shredding paper to investigative research on expert witnesses.
+						William Ricigliano, P.C. is a Personal Injury Law Firm in Manhattan I have a special connection to. This is where I had my first job when I was 16 as a summer intern, where I did everything from shredding paper to investigating expert witnesses.
 					</p>
 				</div>
 			</div>
@@ -54,7 +54,7 @@
 				<div class="portfolio_text_box align_left">
 					<p class="italic_courier top_of_container_text">What I Did</p>
 					<p>
-						 A lot changed since my work as a summer intern, including my career direction which gravitated away from Law and into Web Engineering/Computer Science. From then to now, I never expected that I'd one day rebuild their <a class="underline_link" href="http://wresq.com/" title="William Ricigliano, P.C. Website" target="_blank">website</a> and design their logo, but it was an amazing opportunity to do so.
+						 A lot changed since my work as a summer intern, including my career direction which gravitated away from Law and into Web Engineering/Computer Science. From then to now, I never expected that I'd one day rebuild their website and design their logo, but it was an amazing opportunity to do so.
 					</p>
 				</div>
 
@@ -68,7 +68,7 @@
 			</div>
 		</div>
 		<div class="fifty_spacer"></div>
-		<a href="http://wresq.com/about.html" title="William Ricigliano, P.C. Website" target="_blank"><img class="larger_project_image" src="imgs/wresq-mock.png" alt="William Ricigliano, P.C. Website"/></a>
+		<img class="larger_project_image" src="imgs/wresq-mock.png" alt="William Ricigliano, P.C. Website"/>
 		<div class="fifty_spacer"></div>
 		<div class="white_block">
 			<div class="horizontal_rule"></div>
@@ -76,7 +76,7 @@
 			<div class="wide_text_box left_aligned">
 				<h4 class="mid_page_header">The Issue</h4>
 				<p>
-					There were many problems with the old website that the new one needed to solve. The first one being that the design of the site didn't reflect the brand that the firm wanted to be recognized for. It was a bit outdated, and didn't have many responsive design and/or user experience considerations. So in order for the site to be used as a marketing tool and adequate representation of the firm, it needed to have a fresh start. 
+					There were many problems with the old website that the new one needed to solve. The first one being that the design of the old site did not reflect the brand that the firm wanted to convey. The design was a bit outdated, and it didn't have any responsive design and/or user experience considerations. So in order for the site to be used as a strong marketing and branding tool, it needed to have a fresh start. 
 				</p>
 			</div>
 			<div class="hundred_spacer"></div>
@@ -90,7 +90,7 @@
 			<div class="wide_text_box left_aligned">
 				<h4 class="mid_page_header">What I Changed</h4>
 				<p>
-					The first thing I wanted to be sure to do was establish the desired brand with a logo and color scheme. This guided me to designing and updating the website. I then decided it was important to not only design for all devices, but also build for many different browsers. William Ricigliano, P.C. has a variety of different clients who may not have the most updated or current versions of their browser or operating system, so ensuring the site would "degrade gracefully" was an important task for me. 
+					The first thing I wanted to be sure to do was establish the desired brand with a logo and color scheme. Having this established guided me as I designing and updating the website. I also made sure to consider who the users would be in this case, and design with them in mind first. William Ricigliano, P.C. has a variety of different clients who may not have the most updated or current versions of their browser or operating system, so ensuring the site would "degrade gracefully" was an important task for me. 
 				</p>
 			</div>
 
@@ -101,13 +101,13 @@
 		
 		<div class="side_by_side">
 			<div class="item">
-				<a href="http://wresq.com/contact.html" title="William Ricigliano, P.C. Website" target="_blank"><img class="wresq_trio_screenshot" src="imgs/wresq-contact-screenshot.png" alt="Wresq Contact Screenshot"></a>
+				<img class="wresq_trio_screenshot" src="imgs/wresq-contact-screenshot.png" alt="Wresq Contact Screenshot">
 			</div>
 			<div class="item">
-				<a href="http://wresq.com/practice_areas.html" title="William Ricigliano, P.C. Website" target="_blank"><img class="wresq_trio_screenshot" src="imgs/wresq-service-screenshot.png" alt="Wresq Service Screenshot"></a>
+				<img class="wresq_trio_screenshot" src="imgs/wresq-service-screenshot.png" alt="Wresq Service Screenshot">
 			</div>
 			<div class="item">
-				<a href="http://wresq.com/attorneys.html" title="William Ricigliano, P.C. Website" target="_blank"><img class="wresq_trio_screenshot" src="imgs/wresq-atty-screenshot.png" alt="Wresq Attorneys Screenshot"></a>
+				<img class="wresq_trio_screenshot" src="imgs/wresq-atty-screenshot.png" alt="Wresq Attorneys Screenshot">
 			</div>
 		</div>
 		<div class="hundred_spacer"></div>
