So much new work

--- a/index.html
+++ b/index.html
@@ -26,13 +26,107 @@
 	<link rel="stylesheet" type="text/css" href="website.css">
 </head>
 <body>
-	<nav id="nav_bar">
-		<a href="index.html">Home</a>
-		<a id="portfolio_link" href="#portfolio_container_new">Portfolio</a>
-		<a href="blog.html">Blog</a>
-		<a href="imgs/resume.pdf">Resume</a>
-		<a id="contact_link">Contact</a>
-	</nav>
+	<div class="box_nav_container">
+    <div class="logo_container">
+      <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+    </div>
+    <div class="column_container right_nav_items">
+      <div class="my_meta_info_container">
+        <div class="meta_info_inner">
+          <div class="name header_info">
+            <strong>CONNOR ROWLAND</strong>
+          </div>
+          <div class="header_info">
+            <h4>NEW YORK, NY</h4>
+          </div>
+          <div class="header_info">
+            <a class="header_email" href="mailto:connor.rowland34@gmail.com">CONNOR.ROWLAND34@GMAIL.COM</a>
+          </div>
+        </div>
+      </div>
+      <div class="page_links_container">
+        <a class="page_link" href="./index.html" title="Home">
+          <h4>HOME</h4>
+        </a>
+        <a class="page_link" href="./index.html#portfolio.html" id="portfolio_link" title="Portfolio">
+          <h4>PORTFOLIO</h4>
+        </a>
+        <a class="page_link" href="./about.html" title="About">
+          <h4>ABOUT</h4>
+        </a>
+        <a class="page_link" href="./blog.html" title="Blog">
+          <h4>BLOG</h4>
+        </a>
+        <a class="page_link" href="./imgs/resume.pdf" title="Resume">
+          <h4>RESUME</h4>
+        </a>
+        <a class="page_link" id="contact_link" title="Contact">
+          <h4>CONTACT</h4>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="portfolio_dropdown">
+    <a class="portfolio_dropdown_page_link_a" href="./ellevest.html" title="Ellevest">
+      <h4 class="portfolio_dropdown_page_link">ELLEVEST</h4>
+    </a>
+    <a class="portfolio_dropdown_page_link_a" href="./instamilligram.html" title="instamilligram">
+      <h4 class="portfolio_dropdown_page_link">INSTAMILLIGRAM</h4>
+    </a>
+    <a class="portfolio_dropdown_page_link_a" href="./clientwork.html" title="Client Work">
+      <h4 class="portfolio_dropdown_page_link">CLIENT WORK</h4>
+    </a>
+    <a class="portfolio_dropdown_page_link_a" href="./magazines.html" title="Magazine Spreads">
+      <h4 class="portfolio_dropdown_page_link">MAGAZINE SPREADS</h4>
+    </a>
+    <a class="portfolio_dropdown_page_link_a" href="./baruch.html" title="Baruch College Play">
+      <h4 class="portfolio_dropdown_page_link">PLAY POSTER</h4>
+    </a>
+  </div>
+  <div class="box_nav_container_mobile">
+    <div class="mobile_nav_inner">
+      <div class="mobile_nav_logo">
+        <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+      </div>
+      <div class="mobile_nav_name">
+        <h4>CONNOR ROWLAND</h4>
+      </div>
+      <div class="mobile_nav_hamburger" id="open_nav">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+    <div class="mobile_nav_hidden_menu">
+      <div class="hidden_menu_inner">
+        <div class="mobile_nav_hamburger" id="close_nav">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <div class="mobile_inner_links_container">
+          <a class="mobile_page_link" href="./index.html" title="Home">
+            <h4>HOME</h4>
+          </a>
+          <a class="mobile_page_link" href="./index.html#portfolio.html" title="Portfolio">
+            <h4>PORTFOLIO</h4>
+          </a>
+          <a class="mobile_page_link" href="./about.html" title="About">
+            <h4>ABOUT</h4>
+          </a>
+          <a class="mobile_page_link" href="./blog.html" title="Blog">
+            <h4>BLOG</h4>
+          </a>
+          <a class="mobile_page_link" href="./imgs/resume.pdf" title="Resume">
+            <h4>RESUME</h4>
+          </a>
+          <a class="mobile_page_link" id="contact_link" title="Contact">
+            <h4>CONTACT</h4>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
 	<div class="lander_container_new">
 		<div class="vertical_center">
 			<h1 id="lander_greeting1_new">HEY!</h1>
