--- a/about.html
+++ b/about.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Connor Rowland | Web Engineer and Graphic Designer in New York, NY</title>
-	<!-- Meta Tags -->
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Graphic Design work for different design classes taken at Baruch College in New York City.">
-	<meta name="author" content="Connor Rowland">
-	<meta name="keywords" content="web developer, nyc, developer, manhattan, new york, connor rowland, graphic designer, developer new york, new york web developer, new york web engineer, web developer new york, web engineer, Connor John Rowland, baruch college">
-	<!-- Scripts and Links -->
-	<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <title>Connor Rowland | Web Engineer and Graphic Designer in New York, NY</title>
+  <!-- Meta Tags -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Web Engineer and Graphic Designer based in New York City.">
+  <meta name="author" content="Connor Rowland">
+  <meta name="keywords" content="Connor Rowland, web engineer, freelance web developer, freelance web designer, rowland, graphic designer, web design nyc, web developer nyc, new york web designer, nyc web engineer, web developer ny, web engineer, Connor John Rowland, baruch college, Connor Rowland baruch">
+  <!-- Scripts and Links -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-		  ga('create', 'UA-67845188-1', 'auto');
-		  ga('send', 'pageview');
-
-	</script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-	<script src="app.js"></script>
-	<link rel="shortcut icon" href="imgs/favicon.ico"/>
-	<link rel="stylesheet" type="text/css" href="website.css">
+    ga('create', 'UA-67845188-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+  <script src="app.js"></script>
+  <link rel="shortcut icon" href="imgs/favicon.ico"/>
+  <link rel="stylesheet" type="text/css" href="website.css">
 </head>
 <body>
-	<div class="box_nav_container">
+  <div class="box_nav_container">
     <div class="logo_container">
       <img src="./imgs/logo.png" alt="Connor Rowland Logo">
     </div>
@@ -126,61 +125,36 @@
       </div>
     </div>
   </div>
-
-	<div id="portfolio_container">
-		<div class="title_description_container">
-			<h4 class="category">DESIGN</h4>
-			<h2 class="project_name">Magazine Layouts</h2>
-			<p>Below are a few magazine spreads that I've created for graphic design classes I've taken at Baruch College.</p>
-			<div class="project_attribute">
-				<h4 class="category">TIME COMPLETED</h4>
-				<p>October, 2015 &ndash; April 2017</p>
-			</div>
-		</div>
-		<div class="fifty_spacer"></div>
-		<div class="two_col_grid">
-			<div class="row">
-				<img class="magazine_image" src="imgs/berenice.png" alt="Berenice Abbott Layout" />
-				<img class="magazine_image" src="imgs/cindysherman.png" alt="Cindy Sherman Layout" />
-			</div>
-			<div class="row">
-				<img class="magazine_image" src="imgs/mag1.png" alt="Magazine Layout" />
-				<img class="magazine_image" src="imgs/mag2.png" alt="Magazine Layout" />
-			</div>
-			<div class="row">
-				<img class="magazine_image" src="imgs/mag3.png" alt="Magazine Layout" />
-				<img class="magazine_image" src="imgs/mag5.png" alt="Magazine Layout" />
-			</div>
-		</div>
-
-		<div class="next_project_container">
-			<a href="ellevest.html" class="next_project_link"><strong>Next Project</strong>: Ellevest</a>
-		</div>
-	</div>
-
-
-	<footer>
-		<div id="footer_contact_box">
-			<img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
-			<h1>Say Hi!</h1>
-			<p>Or other things.</p>
-			<button id="email_me_button"><a href="mailto:connor.rowland34@gmail.com">Email Me!</a></button>
-		</div>
-		<div id="footer_lower_box">
-			<nav id="footer_nav_bar">
-				<a href="index.html">Home</a>
-				<a href="index.html#portfolio_container_new">Portfolio</a>
-				<a href="blog.html">Blog</a>
-				<a href="imgs/resume.pdf">Resume</a>
-				<a href="mailto:connor.rowland34@gmail.com">Contact</a>
-			</nav>
-			<div id="footer_links">
-				<a href="mailto:connor.rowland34@gmail.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
-				<a target="_blank" href="https://github.com/connorrowland"><img src="http://i.imgur.com/z0VVNbs.png?1" alt="Github"></a>
-				<a target="_blank" href="https://www.linkedin.com/in/connorrowland"><img src="http://i.imgur.com/BYqAuxN.png?1" alt="LinkedIn"></a>
-			</div>
-			<p id="footer_text">Connor Rowland<br>New York, NY<br>connor.rowland34@gmail.com</p>
-		</div>
-	</footer>
+  <div class="side_by_side_portfolio_intro white_block">
+    <div class="title_description_container">
+      <h2 class="project_name">About Me</h2>
+      <p>I'm a Web Engineer and Graphic Designer living NYC while I'm in school at Baruch College. I study Computer Information Systems at Baruch, with a concentration in Data Analytics and a minor in Graphic Design. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dui turpis, tempus nec dictum eget, cursus at elit. Fusce vitae tellus a dui tincidunt dignissim faucibus in sapien. In mollis non enim id commodo. Praesent tellus purus, consequat id dignissim in, facilisis id nulla. In at orci ac risus ullamcorper ultrices. Cras placerat dolor orci, ut volutpat magna dapibus at. Nulla facilisi. Etiam viverra dolor eu dui lobortis, quis hendrerit neque hendrerit. Morbi et dignissim lectus. Donec turpis sem, convallis ac erat nec, iaculis fermentum arcu. Nam pellentesque mollis elit, a hendrerit mi eleifend vel.</p>
+    </div>
+    <img id="me_photo" src="./imgs/me.jpg" alt="Connor Rowland">
+  </div>
+  
+  <footer id="about_footer">
+    <div id="footer_contact_box">
+      <img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
+      <h1>Say Hi!</h1>
+      <p>Or other things.</p>
+      <button id="email_me_button"><a href="mailto:connor.rowland34@gmail.com">Email Me!</a></button>
+    </div>
+    <div id="footer_lower_box">
+      <nav id="footer_nav_bar">
+        <a href="index.html">Home</a>
+        <a href="index.html#portfolio_container_new">Portfolio</a>
+        <a href="blog.html">Blog</a>
+        <a href="imgs/resume.pdf">Resume</a>
+        <a href="mailto:connor.rowland34@gmail.com">Contact</a>
+      </nav>
+      <div id="footer_links">
+        <a href="mailto:connor.rowland34@gmail.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
+        <a target="_blank" href="https://github.com/connorrowland"><img src="http://i.imgur.com/z0VVNbs.png?1" alt="Github"></a>
+        <a target="_blank" href="https://www.linkedin.com/in/connorrowland"><img src="http://i.imgur.com/BYqAuxN.png?1" alt="LinkedIn"></a>
+      </div>
+      <p id="footer_text">Connor Rowland<br>New York, NY<br>connor.rowland34@gmail.com</p>
+    </div>
+  </footer>
 </body>
 </html>
