--- a/instamilligram.html
+++ b/instamilligram.html
@@ -25,14 +25,141 @@
 	<link rel="stylesheet" type="text/css" href="website.css">
 </head>
 <body>
-	<nav id="nav_bar">
-		<a href="index.html">Home</a>
-		<a href="index.html#portfolio_container_new">Portfolio</a>
-		<a href="blog.html">Blog</a>
-		<a href="imgs/resume.pdf">Resume</a>
-		<a id="contact_link">Contact</a>
-	</nav>
-	<div id="portfolio_container">
+	<div class="box_nav_container">
+    <div class="logo_container">
+      <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+    </div>
+    <div class="column_container right_nav_items">
+      <div class="my_meta_info_container">
+        <div class="meta_info_inner">
+          <div class="name header_info">
+            <strong>CONNOR ROWLAND</strong>
+          </div>
+          <div class="header_info">
+            <h4>NEW YORK, NY</h4>
+          </div>
+          <div class="header_info">
+            <a class="header_email" href="mailto:connor.rowland34@gmail.com">CONNOR.ROWLAND34@GMAIL.COM</a>
+          </div>
+        </div>
+      </div>
+      <div class="page_links_container">
+        <a class="page_link" href="./index.html" title="Home">
+          <h4>HOME</h4>
+        </a>
+        <a class="page_link" href="./index.html#portfolio.html" id="portfolio_link" title="Portfolio">
+          <h4>PORTFOLIO</h4>
+        </a>
+        <a class="page_link" href="./about.html" title="About">
+          <h4>ABOUT</h4>
+        </a>
+        <a class="page_link" href="./blog.html" title="Blog">
+          <h4>BLOG</h4>
+        </a>
+        <a class="page_link" href="./imgs/resume.pdf" title="Resume">
+          <h4>RESUME</h4>
+        </a>
+        <a class="page_link" id="contact_link" title="Contact">
+          <h4>CONTACT</h4>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="portfolio_dropdown">
+    <a class="portfolio_dropdown_page_link_a" href="./ellevest.html" title="Ellevest">
+      <h4 class="portfolio_dropdown_page_link">ELLEVEST</h4>
+    </a>
+    <a class="portfolio_dropdown_page_link_a" href="./instamilligram.html" title="instamilligram">
+      <h4 class="portfolio_dropdown_page_link">INSTAMILLIGRAM</h4>
+    </a>
+    <a class="portfolio_dropdown_page_link_a" href="./clientwork.html" title="Client Work">
+      <h4 class="portfolio_dropdown_page_link">CLIENT WORK</h4>
+    </a>
+    <a class="portfolio_dropdown_page_link_a" href="./magazines.html" title="Magazine Spreads">
+      <h4 class="portfolio_dropdown_page_link">MAGAZINE SPREADS</h4>
+    </a>
+    <a class="portfolio_dropdown_page_link_a" href="./baruch.html" title="Baruch College Play">
+      <h4 class="portfolio_dropdown_page_link">PLAY POSTER</h4>
+    </a>
+  </div>
+  <div class="box_nav_container_mobile">
+    <div class="mobile_nav_inner">
+      <div class="mobile_nav_logo">
+        <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+      </div>
+      <div class="mobile_nav_name">
+        <h4>CONNOR ROWLAND</h4>
+      </div>
+      <div class="mobile_nav_hamburger" id="open_nav">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+    <div class="mobile_nav_hidden_menu">
+      <div class="hidden_menu_inner">
+        <div class="mobile_nav_hamburger" id="close_nav">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <div class="mobile_inner_links_container">
+          <a class="mobile_page_link" href="./index.html" title="Home">
+            <h4>HOME</h4>
+          </a>
+          <a class="mobile_page_link" href="./index.html#portfolio.html" title="Portfolio">
+            <h4>PORTFOLIO</h4>
+          </a>
+          <a class="mobile_page_link" href="./about.html" title="About">
+            <h4>ABOUT</h4>
+          </a>
+          <a class="mobile_page_link" href="./blog.html" title="Blog">
+            <h4>BLOG</h4>
+          </a>
+          <a class="mobile_page_link" href="./imgs/resume.pdf" title="Resume">
+            <h4>RESUME</h4>
+          </a>
+          <a class="mobile_page_link" id="contact_link" title="Contact">
+            <h4>CONTACT</h4>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="side_by_side_portfolio_intro white_block">
+		<div class="title_description_container">
+			<h4 class="category">ENGINEERING</h4>
+			<h2 class="project_name">Instamilligram</h2>
+			<p><a href="http://instamilligram.herokuapp.com/" title="InstaMilligram Link" target="_blank" class="underline_link">InstaMilligram</a> is an photo sharing site intended to replicate the experience of using Instagram. From a developer standpoint, InstaMilligram is a tool I can use to build more projects in the future with, as it is a fully functioning Rails CRUD app with login capability.</p>
+			<div class="project_attribute">
+				<h4 class="category">TIME COMPLETED</h4>
+				<p>October, 2016</p>
+			</div>
+			<div class="project_attribute">
+				<h4 class="category">WHY I MADE IT</h4>
+				<p>Beyond aiming to replicate Instagram, my intentions with InstaMilligram were to sharpen my Rails and AJAX/JQuery skills, and build an application with RESTful considerations in mind that so I could use it as a solid foundation for other projects. I encountered a few bumps along the way in building InstaMilligram as unexpected situations came about. But these challenges ended up teaching me so much more than I expected, and also preparing me for my work at Ellevest, where I spent a good deal of time adding to and refactoring pieces of Rails products.</p>
+			</div>
+			<div class="project_attribute">
+				<h4 class="category">DIFFICULTIES ALONG THE WAY</h4>
+				<p>
+				This project also shed light on many of the challenges associated with developing something from the ground up. But it was in these challenges that I truly got to know not only the product, but the technologies that support it (and do not...). Deployments in particular were one hurdle for me to overcome. Looking back at my <a href="ellevest.html" class="underline_link">time at Ellevest</a>, I definitely took their well developed deployment process for granted. So when it was time for me to do this on my own with InstaMilligram, I ran into a few bumps along the way (that entailed so many "hope this works" commit messages), but eventually gained a great understanding of the Rails Asset Pipeline. 
+			</p>
+
+			<p>
+				Another challenge I faced with InstaMilligram came from using Heroku for a photo sharing website without realizing that Heroku's database storage is ephemeral (*shakes head*). So I ended up learning how to connect a Rails application hosted on Heroku with AWS S3, and the world became good again!
+			</p>
+
+			<p>
+				These challenges&mdash;along with many others that I've encountered as I grow into my place as a Web Engineer&mdash;and the way I've learned to deal with them are outlined in a blog post I've written <a href="posts/best-way-to-make-mistakes.html" class="underline_link">here</a>
+			</p>
+			</div>
+		</div>
+		<img id="instamilligram_photo_desktop" src="./imgs/igmilligram-image.png" alt="Instamilligram" title="Instamilligram">
+		<img id="instamilligram_photo_mobile" src="./imgs/igmilligram-mobile.png" alt="Instamilligram" title="Instamilligram">
+	</div>
+
+	<!-- <div id="portfolio_container">
 		<h1 id="project_name_text">InstaMilligram</h1>
 		
 		<div class="portfolio_inner_text">
@@ -96,9 +223,9 @@
 		<div class="fifty_spacer"></div>
 
 		<div class="next_project_container">
-			<a href="ellevest.html" class="next_project_link"><strong>Next Project</strong>: Ellevest</a>
+			<a href="clientwork.html" class="next_project_link"><strong>Next Project</strong>: Client Work</a>
 		</div>
-	</div>
+	</div> -->
 
 	
 	<footer>
