--- a/baruch.html
+++ b/baruch.html
@@ -139,7 +139,7 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dui turpis, tempus nec dictum eget, cursus at elit. Fusce vitae tellus a dui tincidunt dignissim faucibus in sapien. In mollis non enim id commodo. Praesent tellus purus, consequat id dignissim in, facilisis id nulla. In at orci ac risus ullamcorper ultrices. Cras placerat dolor orci, ut volutpat magna dapibus at. Nulla facilisi. Etiam viverra dolor eu dui lobortis, quis hendrerit neque hendrerit. Morbi et dignissim lectus. Donec turpis sem, convallis ac erat nec, iaculis fermentum arcu. Nam pellentesque mollis elit, a hendrerit mi eleifend vel.</p>
 			</div>
 		</div>
-		<img id="sls_photo_elizabeth" src="./imgs/sls-photo.jpg" alt="Suddenly Last Summer" title="Source: ">
+		<img id="sls_photo_elizabeth" src="./imgs/sls-photo.jpg" alt="Suddenly Last Summer" title="Source: Nerve.com">
 	</div>
 	<div class="center">
 		<img id="sls_poster" src="imgs/sls_poster.png" alt="Connor Rowland Suddenly Last Summer Poster" />
