--- a/blog.html
+++ b/blog.html
@@ -131,7 +131,7 @@
   </div>
 	<div class="posts_container">
     <div class="feature_post">
-      <a class="feature_blog_post_title">Why I Would Resist the Last Recently Used Approach to Sorting</a>
+      <a class="feature_blog_post_title" href="./posts/last-recently-used.html">Why I Would Resist the Last Recently Used Approach to Sorting</a>
       <img class="feature_image" src="./imgs/sorting-title.png" alt="">
     </div>
 
@@ -140,7 +140,7 @@
 		<div class="twenty_spacer"></div>
 
 		<div class="old_posts_container">
-			<div class="non_feature_post proj3">
+			<div class="non_feature_post proj6">
 				<div class="title_container center vertical_center">
 					<a class="non_feature_blog_post_title white-font" title="5 Things I Learned From Freelancing" href="posts/5-things-learned-from-freelancing.html">5 Things I Learned From Freelancing</a>
 				</div>
@@ -150,12 +150,12 @@
 					<a class="non_feature_blog_post_title black-font" title="My Approach to User Flow" href="posts/how-1-link.html">How A Focus On User Flow And 30 Minutes of Coding Decreased Drop-Off On My Website By 30%</a>
 				</div>
 			</div>
-			<div class="fill_space" id="mistakes_bg">
+			<div class="fill_space proj7">
 				<div class="title_container center vertical_center">
 					<a class="non_feature_blog_post_title white-font" title="How To Successfully Make Mistakes" href="posts/best-way-to-make-mistakes.html">How To Successfully Make Mistakes</a>
 				</div>
 			</div>
-		</div>-
+		</div>
 	</div>
 
 	<footer>
