--- a/index.html
+++ b/index.html
@@ -153,48 +153,16 @@
 				</div>
 			</div>
 		</a>
-		<a href="LucasJazzCorner.html" title="Lucas Jazz Corner">
+		<a href="clientwork.html" title="Client Work">
 			<div class="portfolio_preview_updates green_blue">
 				<div class="portfolio_preview_bio">
-					<h2>Luca’s Jazz Corner</h2>
-					<p>A website I designed for an emerging jazz club on the Upper East Side.</p>
+					<h2>Client Work</h2>
+					<p>projects I've taken on as a freelancer</p>
 				</div>
 			</div>
 		</a>
-		<a href="wresq.html" title="">
+		<a href="baruch.html" title="Baruch">
 			<div class="portfolio_preview_updates med_dark_gr_blue">
-				<div class="portfolio_preview_bio">
-					<h2>Law Firm Website</h2>
-					<p>Web Engineering and design work done for a law firm based in NYC</p>
-				</div>
-			</div>
-		</a>
-		<a href="iphone.html" title="">
-			<div class="portfolio_preview_updates dark_green_blue">
-				<div class="portfolio_preview_bio">
-					<h2>iPhone Reproduction</h2>
-					<p>An interactive iPhone made with HTML, CSS, and JavaScript</p>
-				</div>
-			</div>
-		</a>
-<!-- 		<a href="letsmeet.html" title="">
-			<div class="portfolio_preview_updates proj4">
-				<div class="portfolio_preview_bio">
-					<h2>Let's Meet</h2>
-					<p>Fullstack Project made at General Assembly in NYC</p>
-				</div>
-			</div>
-		</a> -->
-		<a href="trilogy.html" title="">
-			<div class="portfolio_preview_updates proj5">
-				<div class="portfolio_preview_bio">
-					<h2>Git/GitHub Graphics</h2>
-					<p>Various graphics made to explain Git/Github processes</p>
-				</div>
-			</div>
-		</a>
-		<a href="baruch.html" title="">
-			<div class="portfolio_preview_updates proj6">
 				<div class="portfolio_preview_bio">
 					<h2>Baruch College Play</h2>
 					<p>A poster design made for a Baruch College play</p>
@@ -202,17 +170,10 @@
 			</div>
 		</a>
 		<a href="magazines.html" title="">
-			<div class="portfolio_preview_updates proj7">
+			<div class="portfolio_preview_updates dark_green_blue">
 				<div class="portfolio_preview_bio">
 					<h2>Magazine Spreads</h2>
-				</div>
-			</div>
-		</a>
-		<a href="pride.html" title="">
-			<div class="portfolio_preview_updates proj8">
-				<div class="portfolio_preview_bio">
-					<h2>Pride T Shirt</h2>
-					<p>A T shirt design I made for the 2015 NYC Pride March</p>
+					<p>Various graphics made to explain Git/Github processes</p>
 				</div>
 			</div>
 		</a>
