--- a/magazines.html
+++ b/magazines.html
@@ -45,22 +45,22 @@
       </div>
       <div class="page_links_container">
         <a class="page_link" href="./index.html" title="Home">
-          <h4>HOME</h4>
+          <h4 class="mobile_link_text">HOME</h4>
         </a>
         <a class="page_link" href="./index.html#portfolio.html" id="portfolio_link" title="Portfolio">
-          <h4>PORTFOLIO</h4>
+          <h4 class="mobile_link_text">PORTFOLIO</h4>
         </a>
         <a class="page_link" href="./about.html" title="About">
-          <h4>ABOUT</h4>
+          <h4 class="mobile_link_text">ABOUT</h4>
         </a>
         <a class="page_link" href="./blog.html" title="Blog">
-          <h4>BLOG</h4>
+          <h4 class="mobile_link_text">BLOG</h4>
         </a>
         <a class="page_link" href="./imgs/resume.pdf" title="Resume">
-          <h4>RESUME</h4>
+          <h4 class="mobile_link_text">RESUME</h4>
         </a>
         <a class="page_link" id="contact_link" title="Contact">
-          <h4>CONTACT</h4>
+          <h4 class="mobile_link_text">CONTACT</h4>
         </a>
       </div>
     </div>
