Fix for contact button issue

--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
           <a class="mobile_page_link" href="./imgs/resume.pdf" title="Resume">
             <h4 class="mobile_link_text">RESUME</h4>
           </a>
-          <a class="mobile_page_link" id="contact_link" title="Contact">
+          <a class="mobile_page_link" id="mobile_contact_link" title="Contact">
             <h4 class="mobile_link_text">CONTACT</h4>
           </a>
         </div>
@@ -128,7 +128,7 @@
   <div class="side_by_side_portfolio_intro white_block">
     <div class="title_description_container">
       <h2 class="project_name">About Me</h2>
-      <p>I'm a Web Engineer and Graphic Designer living NYC while I'm in school at Baruch College. I study Computer Information Systems at Baruch, with a concentration in Data Analytics and a minor in Graphic Design. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dui turpis, tempus nec dictum eget, cursus at elit. Fusce vitae tellus a dui tincidunt dignissim faucibus in sapien. In mollis non enim id commodo. Praesent tellus purus, consequat id dignissim in, facilisis id nulla. In at orci ac risus ullamcorper ultrices. Cras placerat dolor orci, ut volutpat magna dapibus at. Nulla facilisi. Etiam viverra dolor eu dui lobortis, quis hendrerit neque hendrerit. Morbi et dignissim lectus. Donec turpis sem, convallis ac erat nec, iaculis fermentum arcu. Nam pellentesque mollis elit, a hendrerit mi eleifend vel.</p>
+      <p>I'm a Web Engineer and Graphic Designer living NYC while I'm in school at Baruch College. I study Computer Information Systems at Baruch, with a concentration in Data Analytics and a minor in Graphic Design.</p>
     </div>
     <img id="me_photo" src="./imgs/me.jpg" alt="Connor Rowland">
   </div>
