--- a/baruch.html
+++ b/baruch.html
@@ -118,7 +118,7 @@
           <a class="mobile_page_link" href="./imgs/resume.pdf" title="Resume">
             <h4 class="mobile_link_text">RESUME</h4>
           </a>
-          <a class="mobile_page_link" id="contact_link" title="Contact">
+          <a class="mobile_page_link" id="mobile_contact_link" title="Contact">
             <h4 class="mobile_link_text">CONTACT</h4>
           </a>
         </div>
@@ -136,7 +136,7 @@
 			</div>
 			<div class="project_attribute">
 				<h4 class="category">PROJECT BRIEF</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dui turpis, tempus nec dictum eget, cursus at elit. Fusce vitae tellus a dui tincidunt dignissim faucibus in sapien. In mollis non enim id commodo. Praesent tellus purus, consequat id dignissim in, facilisis id nulla. In at orci ac risus ullamcorper ultrices. Cras placerat dolor orci, ut volutpat magna dapibus at. Nulla facilisi. Etiam viverra dolor eu dui lobortis, quis hendrerit neque hendrerit. Morbi et dignissim lectus. Donec turpis sem, convallis ac erat nec, iaculis fermentum arcu. Nam pellentesque mollis elit, a hendrerit mi eleifend vel.</p>
+				<p>The play itself has a some disturbing undertones, so when the producer of the play came to our class to talk about the poster project, he encouraged us to add this element to our posters. We were told this could be communicated in a variety of ways, but one of the most prominent could be the lobotomy that a character in the play undergoes. Concurrently, the play also had strong themes of wealth and sophistication that we were encouraged to convey.</p>
 			</div>
 		</div>
 		<img id="sls_photo_elizabeth" src="./imgs/sls-photo.jpg" alt="Suddenly Last Summer" title="Source: Nerve.com">
