--- a/baruch.html
+++ b/baruch.html
@@ -24,9 +24,11 @@
 	<link rel="stylesheet" type="text/css" href="website.css">
 </head>
 <body>
-	<div class="box_nav_container">
+  <div class="box_nav_container">
     <div class="logo_container">
-      <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+      <a href="./index.html">
+        <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+      </a>
     </div>
     <div class="column_container right_nav_items">
       <div class="my_meta_info_container">
@@ -84,7 +86,9 @@
   <div class="box_nav_container_mobile">
     <div class="mobile_nav_inner">
       <div class="mobile_nav_logo">
-        <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+        <a href="./index.html">
+          <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+        </a>
       </div>
       <div class="mobile_nav_name">
         <h4>CONNOR ROWLAND</h4>
