--- a/clientwork.html
+++ b/clientwork.html
@@ -27,7 +27,9 @@
 <body>
   <div class="box_nav_container">
     <div class="logo_container">
-      <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+      <a href="./index.html">
+        <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+      </a>
     </div>
     <div class="column_container right_nav_items">
       <div class="my_meta_info_container">
@@ -85,7 +87,9 @@
   <div class="box_nav_container_mobile">
     <div class="mobile_nav_inner">
       <div class="mobile_nav_logo">
-        <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+        <a href="./index.html">
+          <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+        </a>
       </div>
       <div class="mobile_nav_name">
         <h4>CONNOR ROWLAND</h4>
@@ -119,7 +123,7 @@
           <a class="mobile_page_link" href="./imgs/resume.pdf" title="Resume">
             <h4 class="mobile_link_text">RESUME</h4>
           </a>
-          <a class="mobile_page_link" id="contact_link" title="Contact">
+          <a class="mobile_page_link" id="mobile_contact_link" title="Contact">
             <h4 class="mobile_link_text">CONTACT</h4>
           </a>
         </div>
