--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 	<link rel="stylesheet" type="text/css" href="website.css">
 </head>
 <body>
-	<div class="box_nav_container">
+  <div class="box_nav_container">
     <div class="logo_container">
-      <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+      <a href="./index.html">
+        <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+      </a>
     </div>
     <div class="column_container right_nav_items">
       <div class="my_meta_info_container">
@@ -48,7 +50,7 @@
         <a class="page_link" href="./index.html" title="Home">
           <h4>HOME</h4>
         </a>
-        <a class="page_link" href="#portfolio.html" id="portfolio_link" title="Portfolio">
+        <a class="page_link" href="./index.html#portfolio.html" id="portfolio_link" title="Portfolio">
           <h4>PORTFOLIO</h4>
         </a>
         <a class="page_link" href="./about.html" title="About">
@@ -86,7 +88,9 @@
   <div class="box_nav_container_mobile">
     <div class="mobile_nav_inner">
       <div class="mobile_nav_logo">
-        <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+        <a href="./index.html">
+          <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+        </a>
       </div>
       <div class="mobile_nav_name">
         <h4>CONNOR ROWLAND</h4>
@@ -108,7 +112,7 @@
           <a class="mobile_page_link" href="./index.html" title="Home">
             <h4 class="mobile_link_text">HOME</h4>
           </a>
-          <a class="mobile_page_link" href="#portfolio.html" title="Portfolio">
+          <a class="mobile_page_link" href="./index.html#portfolio.html" title="Portfolio">
             <h4 class="mobile_link_text">PORTFOLIO</h4>
           </a>
           <a class="mobile_page_link" href="./about.html" title="About">
