--- a/magazines.html
+++ b/magazines.html
@@ -25,9 +25,11 @@
 	<link rel="stylesheet" type="text/css" href="website.css">
 </head>
 <body>
-	<div class="box_nav_container">
+  <div class="box_nav_container">
     <div class="logo_container">
-      <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+      <a href="./index.html">
+        <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+      </a>
     </div>
     <div class="column_container right_nav_items">
       <div class="my_meta_info_container">
@@ -45,22 +47,22 @@
       </div>
       <div class="page_links_container">
         <a class="page_link" href="./index.html" title="Home">
-          <h4 class="mobile_link_text">HOME</h4>
+          <h4>HOME</h4>
         </a>
         <a class="page_link" href="./index.html#portfolio.html" id="portfolio_link" title="Portfolio">
-          <h4 class="mobile_link_text">PORTFOLIO</h4>
+          <h4>PORTFOLIO</h4>
         </a>
         <a class="page_link" href="./about.html" title="About">
-          <h4 class="mobile_link_text">ABOUT</h4>
+          <h4>ABOUT</h4>
         </a>
         <a class="page_link" href="./blog.html" title="Blog">
-          <h4 class="mobile_link_text">BLOG</h4>
+          <h4>BLOG</h4>
         </a>
         <a class="page_link" href="./imgs/resume.pdf" title="Resume">
-          <h4 class="mobile_link_text">RESUME</h4>
+          <h4>RESUME</h4>
         </a>
         <a class="page_link" id="contact_link" title="Contact">
-          <h4 class="mobile_link_text">CONTACT</h4>
+          <h4>CONTACT</h4>
         </a>
       </div>
     </div>
@@ -85,7 +87,9 @@
   <div class="box_nav_container_mobile">
     <div class="mobile_nav_inner">
       <div class="mobile_nav_logo">
-        <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+        <a href="./index.html">
+          <img src="./imgs/logo.png" alt="Connor Rowland Logo">
+        </a>
       </div>
       <div class="mobile_nav_name">
         <h4>CONNOR ROWLAND</h4>
@@ -105,22 +109,22 @@
         </div>
         <div class="mobile_inner_links_container">
           <a class="mobile_page_link" href="./index.html" title="Home">
-            <h4>HOME</h4>
+            <h4 class="mobile_link_text">HOME</h4>
           </a>
           <a class="mobile_page_link" href="./index.html#portfolio.html" title="Portfolio">
-            <h4>PORTFOLIO</h4>
+            <h4 class="mobile_link_text">PORTFOLIO</h4>
           </a>
           <a class="mobile_page_link" href="./about.html" title="About">
-            <h4>ABOUT</h4>
+            <h4 class="mobile_link_text">ABOUT</h4>
           </a>
           <a class="mobile_page_link" href="./blog.html" title="Blog">
-            <h4>BLOG</h4>
+            <h4 class="mobile_link_text">BLOG</h4>
           </a>
           <a class="mobile_page_link" href="./imgs/resume.pdf" title="Resume">
-            <h4>RESUME</h4>
+            <h4 class="mobile_link_text">RESUME</h4>
           </a>
           <a class="mobile_page_link" id="mobile_contact_link" title="Contact">
-            <h4>CONTACT</h4>
+            <h4 class="mobile_link_text">CONTACT</h4>
           </a>
         </div>
       </div>
