--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
       <h2 class="project_name">About Me</h2>
       <p>I'm a Web Engineer and Graphic Designer living NYC while I'm in school at Baruch College. I study Computer Information Systems at Baruch, with a concentration in Data Analytics and a minor in Graphic Design.</p>
     </div>
-    <img id="me_photo" src="./imgs/me.jpg" alt="Connor Rowland">
+    <img id="me_photo" src="./imgs/me.JPG" alt="Connor Rowland">
   </div>
   
   <footer id="about_footer">
