--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<link rel="stylesheet" type="text/css" href="website.css">
 </head>
 <body>
-  <div class="box_nav_container">
+<div class="box_nav_container">
     <div class="logo_container">
       <a href="./index.html">
         <img src="./imgs/logo.png" alt="Connor Rowland Logo">
@@ -50,7 +50,7 @@
         <a class="page_link" href="./index.html" title="Home">
           <h4>HOME</h4>
         </a>
-        <a class="page_link" href="./index.html#portfolio.html" id="portfolio_link" title="Portfolio">
+        <a class="page_link" href="#portfolio.html" id="portfolio_link" title="Portfolio">
           <h4>PORTFOLIO</h4>
         </a>
         <a class="page_link" href="./about.html" title="About">
@@ -74,6 +74,9 @@
     </a>
     <a class="portfolio_dropdown_page_link_a" href="./instamilligram.html" title="instamilligram">
       <h4 class="portfolio_dropdown_page_link">INSTAMILLIGRAM</h4>
+    </a>
+    <a class="portfolio_dropdown_page_link_a" href="./emotionalalexa.html" title="Emotional Alexa">
+      <h4 class="portfolio_dropdown_page_link">EMOTIONAL ALEXA</h4>
     </a>
     <a class="portfolio_dropdown_page_link_a" href="./clientwork.html" title="Client Work">
       <h4 class="portfolio_dropdown_page_link">CLIENT WORK</h4>
@@ -112,9 +115,34 @@
           <a class="mobile_page_link" href="./index.html" title="Home">
             <h4 class="mobile_link_text">HOME</h4>
           </a>
-          <a class="mobile_page_link" href="./index.html#portfolio.html" title="Portfolio">
-            <h4 class="mobile_link_text">PORTFOLIO</h4>
-          </a>
+          <div class="mobile_portfolio_title">
+            <a class="mobile_page_link" href="#portfolio.html" title="Portfolio">
+              <h4>PORTFOLIO</h4>
+            </a>
+            <h4 id="mobile_portfolio_expand">+</h4>
+          </div>
+          <div class="mobile_portfolio_dropdown">
+            <div class="mobile_portfolio_dropdown_inner">
+              <a class="mobile_portfolio_dropdown_link_a" href="./ellevest.html" title="Ellevest">
+                <h4>ELLEVEST</h4>
+              </a>
+              <a class="mobile_portfolio_dropdown_link_a" href="./instamilligram.html" title="instamilligram">
+                <h4>INSTAMILLIGRAM</h4>
+              </a>
+              <a class="mobile_portfolio_dropdown_link_a" href="./emotionalalexa.html" title="Emotional Alexa">
+                <h4>EMOTIONAL ALEXA</h4>
+              </a>
+              <a class="mobile_portfolio_dropdown_link_a" href="./clientwork.html" title="Client Work">
+                <h4>CLIENT WORK</h4>
+              </a>
+              <a class="mobile_portfolio_dropdown_link_a" href="./magazines.html" title="Magazine Spreads">
+                <h4>MAGAZINE SPREADS</h4>
+              </a>
+              <a class="mobile_portfolio_dropdown_link_a" href="./baruch.html" title="Baruch College Play">
+                <h4>PLAY POSTER</h4>
+              </a>
+            </div>
+          </div>
           <a class="mobile_page_link" href="./about.html" title="About">
             <h4 class="mobile_link_text">ABOUT</h4>
           </a>
@@ -131,6 +159,7 @@
       </div>
     </div>
   </div>
+
 	<div class="lander_container_new">
 		<div class="vertical_center">
 			<h1 id="lander_greeting1_new">HEY!</h1>
