--- a/emotionalalexa.html
+++ b/emotionalalexa.html
@@ -206,23 +206,18 @@
     <div id="footer_contact_box">
       <img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
       <h1>Say Hi!</h1>
-      <p>Or other things.</p>
-      <button id="email_me_button"><a href="mailto:connor.rowland34@gmail.com">Email Me!</a></button>
+      <h2>Or other things.</h2>
+      <button id="email_me_button"><a href="mailto:cjr6734@yahoo.com">Email Me!</a></button>
     </div>
     <div id="footer_lower_box">
       <nav id="footer_nav_bar">
-        <a href="index.html">Home</a>
-        <a href="index.html#portfolio_container_new">Portfolio</a>
-        <a href="blog.html">Blog</a>
-        <a href="imgs/resume.pdf">Resume</a>
+        <a href="../index.html">Home</a>
+        <a href="../index.html/portfolio_container_new">Portfolio</a>
+        <a href="../blog.html">Blog</a>
+        <a href="../imgs/resume.pdf">Resume</a>
         <a href="mailto:connor.rowland34@gmail.com">Contact</a>
       </nav>
-      <div id="footer_links">
-        <a href="mailto:connor.rowland34@gmail.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
-        <a target="_blank" href="https://github.com/connorrowland"><img src="http://i.imgur.com/z0VVNbs.png?1" alt="Github"></a>
-        <a target="_blank" href="https://www.linkedin.com/in/connorrowland"><img src="http://i.imgur.com/BYqAuxN.png?1" alt="LinkedIn"></a>
-      </div>
-      <p id="footer_text">Connor Rowland<br>New York, NY<br>connor.rowland34@gmail.com</p>
+      <p id="footer_text">Connor Rowland<br>New York, NY<br><a href="mailto:connor.rowland34@gmail.com">connor.rowland34@gmail.com</a><br><a href="https://www.linkedin.com/in/connorrowland/">Connect with me on Linkedin</a></p>
     </div>
   </footer>
 </body>
