--- a/index.html
+++ b/index.html
@@ -170,15 +170,15 @@
 		</div>
 	</div>
 	<div id="portfolio_container_new">
-		<a href="instamilligram.html" title="InstaMilligram">
-			<div class="portfolio_preview_updates proj9">
-				<div class="portfolio_preview_bio">
-					<h2>InstaMilligram</h2>
-					<p>An Instagram replication built with Ruby on Rails&mdash;an independent project.</p>
-				</div>
-			</div>
-		</a>
-		<a href="ellevest.html" title="">
+    <a class="potfolio_link_box" href="emotionalalexa.html" title="Emotional Alexa">
+      <div class="portfolio_preview_updates proj9">
+        <div class="portfolio_preview_bio">
+          <h2>Emotional Alexa</h2>
+          <p>An emotionally intelligent chatbot made into an Amazon Alexa skill</p>
+        </div>
+      </div>
+    </a>
+		<a class="potfolio_link_box" href="ellevest.html" title="">
 			<div class="portfolio_preview_updates proj3">
 				<div class="portfolio_preview_bio">
 					<h2>Ellevest</h2>
@@ -186,24 +186,32 @@
 				</div>
 			</div>
 		</a>
-		<a href="clientwork.html" title="Client Work">
-			<div class="portfolio_preview_updates green_blue">
+    <a class="potfolio_link_box" href="instamilligram.html" title="InstaMilligram">
+      <div class="portfolio_preview_updates green_blue">
+        <div class="portfolio_preview_bio">
+          <h2>InstaMilligram</h2>
+          <p>An Instagram replication built with Ruby on Rails&mdash;an independent project.</p>
+        </div>
+      </div>
+    </a>
+		<a class="potfolio_link_box" href="clientwork.html" title="Client Work">
+			<div class="portfolio_preview_updates med_dark_gr_blue">
 				<div class="portfolio_preview_bio">
 					<h2>Client Work</h2>
 					<p>projects I've taken on as a freelancer</p>
 				</div>
 			</div>
 		</a>
-		<a href="baruch.html" title="Baruch">
-			<div class="portfolio_preview_updates med_dark_gr_blue">
+		<a class="potfolio_link_box" href="baruch.html" title="Baruch">
+			<div class="portfolio_preview_updates dark_green_blue">
 				<div class="portfolio_preview_bio">
 					<h2>Baruch College Play</h2>
 					<p>A poster design made for a Baruch College play</p>
 				</div>
 			</div>
 		</a>
-		<a href="magazines.html" title="">
-			<div class="portfolio_preview_updates dark_green_blue">
+		<a class="potfolio_link_box" href="magazines.html" title="">
+			<div class="portfolio_preview_updates dark_blue">
 				<div class="portfolio_preview_bio">
 					<h2>Magazine Spreads</h2>
 					<p>Various graphics made to explain Git/Github processes</p>
