Updating title to an article

--- a/blog.html
+++ b/blog.html
@@ -164,7 +164,7 @@
   </div>
 	<div class="posts_container">
     <div class="feature_post">
-      <a class="feature_blog_post_title" href="./posts/last-recently-used.html">Why I Would Resist the Last Recently Used Approach to Sorting</a>
+      <a class="feature_blog_post_title" href="./posts/last-recently-used.html">Why I Would (Sometimes) Resist the Last Recently Used Approach to Sorting</a>
       <img class="feature_image" src="./imgs/sorting-title.png" alt="">
     </div>
 
