Updating client work

--- a/clientwork.html
+++ b/clientwork.html
@@ -172,6 +172,21 @@
   </div>
 
     <div class="project_description">
+      <h4 class="category">Interview Prep Product</h4>
+      <p>
+        One aspect of my job as a freelancer is to lead the design and frontend engineering for early stage startups. Below is a recent project I worked on, where I designed the product, and then used React and Flask to integrate those designs into a consistent user interface. 
+      </p>
+    </div>
+    <div class="row">
+      <img class="magazine_image" src="imgs/fp5.png" alt="Magazine Layout" />
+      <img class="magazine_image" src="imgs/fp2.png" alt="Cindy Sherman Layout" />
+    </div>
+    <div class="row">
+      <img class="magazine_image" src="imgs/fp4.png" alt="Magazine Layout" />
+      <img class="magazine_image" src="imgs/fp1.png" alt="Berenice Abbott Layout" />
+    </div>
+
+    <div class="project_description">
       <h4 class="category">Luca's Jazz Corner</h4>
       <p>
         <a class="underline_link" href="http://www.lucasjazzcorner.com/" title="Lucas Jazz Corner" target="_blank">Luca’s Jazz Corner</a> is a website that I designed in October of 2016 for a restaurant owner, Luca, who wanted to transform his restarant into a fully functional jazz club. This website serves as a place for customers to go and find information, videos, and photos of artists, find out more about Luca’s Jazz Corner, and also figure out when artists are performing. I'm super proud of the way this website came out, and it has served as an effective, impactful asset to the business's success, which is all I could ask for as a designer. 
