Fixing footer nav

--- a/ellevest.html
+++ b/ellevest.html
@@ -215,10 +215,10 @@
     </div>
     <div id="footer_lower_box">
       <nav id="footer_nav_bar">
-        <a href="../index.html">Home</a>
-        <a href="../index.html/portfolio_container_new">Portfolio</a>
-        <a href="../blog.html">Blog</a>
-        <a href="../imgs/resume.pdf">Resume</a>
+        <a href="./index.html">Home</a>
+        <a href="./index.html#portfolio.html" id="portfolio_link">Portfolio</a>
+        <a href="./blog.html">Blog</a>
+        <a href="./imgs/resume.pdf">Resume</a>
         <a href="mailto:connor.rowland34@gmail.com">Contact</a>
       </nav>
       <p id="footer_text">Connor Rowland<br>New York, NY<br><a href="mailto:connor.rowland34@gmail.com">connor.rowland34@gmail.com</a><br><a href="https://www.linkedin.com/in/connorrowland/">Connect with me on Linkedin</a></p>
