--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
   <div class="side_by_side_portfolio_intro white_block">
     <div class="title_description_container">
       <h2 class="project_name">About Me</h2>
-      <p>I'm a Web Engineer and Graphic Designer living NYC while I'm in school at Baruch College. I study Computer Information Systems at Baruch, with a concentration in Data Analytics and a minor in Graphic Design.</p>
+      <p>I'm a Web Engineer and Graphic Designer living in NYC while I'm in school at Baruch College. I study Computer Information Systems at Baruch, with a concentration in Data Analytics and a minor in Graphic Design.</p>
     </div>
     <img id="me_photo" src="./imgs/me.JPG" alt="Connor Rowland">
   </div>
