Updates insta bio

--- a/instamilligram.html
+++ b/instamilligram.html
@@ -163,7 +163,9 @@
 		<div class="title_description_container">
 			<h4 class="category">ENGINEERING</h4>
 			<h2 class="project_name">Instamilligram</h2>
-			<p><a href="http://instamilligram.herokuapp.com/" title="InstaMilligram Link" target="_blank" class="underline_link">InstaMilligram</a> is an photo sharing site intended to replicate the experience of using Instagram. From a developer standpoint, InstaMilligram is a tool I can use to build more projects in the future with, as it is a fully functioning Rails CRUD app with login capability.</p>
+			<p><b>Note: I recently shut down Instamilligram's photo sharing capabilities as a result of the costs associated with photo storage. This is why you won't see photos if you go to the site.</b>
+      </p>
+      <p><a href="http://instamilligram.herokuapp.com/" title="InstaMilligram Link" target="_blank" class="underline_link">InstaMilligram</a> is an photo sharing site intended to replicate the experience of using Instagram. From a developer standpoint, InstaMilligram is a tool I can use to build more projects in the future with, as it is a fully functioning Rails CRUD app with login capability.</p>
 			<div class="project_attribute">
 				<h4 class="category">TIME COMPLETED</h4>
 				<p>October, 2016</p>
@@ -175,7 +177,7 @@
 			<div class="project_attribute">
 				<h4 class="category">DIFFICULTIES ALONG THE WAY</h4>
 				<p>
-				This project also shed light on many of the challenges associated with developing something from the ground up. But it was in these challenges that I truly got to know not only the product, but the technologies that support it (and do not...). Deployments in particular were one hurdle for me to overcome. Looking back at my <a href="ellevest.html" class="underline_link">time at Ellevest</a>, I definitely took their well developed deployment process for granted. So when it was time for me to do this on my own with InstaMilligram, I ran into a few bumps along the way (that entailed so many "hope this works" commit messages), but eventually gained a great understanding of the Rails Asset Pipeline. 
+				This project also shed light on many of the challenges associated with developing something from the ground up. But it was in these challenges that I truly got to know not only the product, but the technologies that support it (and do not...). Deployments in particular were one hurdle for me to overcome. Looking back at my <a href="ellevest.html" class="underline_link">time at Ellevest</a>, I definitely took their well developed deployment process for granted. So when it was time for me to do this on my own with InstaMilligram, I ran into a few bumps along the way (that entailed so many "hope this works" commit messages), but eventually gained a great understanding of the Rails Asset Pipeline.
 			</p>
 
 			<p>
@@ -195,7 +197,7 @@
 		<a href="clientwork.html" class="next_project_link"><strong>Next Project</strong>: Client Work</a>
 	</div>
 
-	
+
 	<footer>
     <div id="footer_contact_box">
       <img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
