--- a/clientwork.html
+++ b/clientwork.html
@@ -172,9 +172,27 @@
   </div>
 
     <div class="project_description">
+      <h4 class="category">Alden Wolf Website</h4>
+      <p>
+        Alden Wolf is a design agency in New York who needed a website when they launched in 2017. If you'd like to take a look, that website can be found <b><a href="http://aldenwolf.com/" target="_blank">here</a></b>.
+      </p>
+    </div>
+
+    <img class="project_image" id="aw-stamps" src="./imgs/alden_wolf_stamps.png" alt="Alden Wolf Stamps">
+    <div class="fifty_spacer"></div>
+    <div class="project_description">
+      <h4 class="category">Knaq</h4>
+      <p>
+        Knaq is a physical product built for elevator technicians that enables them to monitor elevators from anywhere. In the fall of 2017, I had the opportunity to work on their public-facing website, in addition to their internal product. Only their landing page is live at this point, and that can be found <b><a href="https://knaq.io/" target="_blank">here</a></b>.
+      </p>
+    </div>
+
+    <div class="fifty_spacer"></div>
+
+    <div class="project_description">
       <h4 class="category">Interview Prep Product</h4>
       <p>
-        One aspect of my job as a freelancer is to lead the design and frontend engineering for early stage startups. Below is a recent project I worked on, where I designed the product, and then used React and Flask to integrate those designs into a consistent user interface. 
+        One aspect of my job as a freelancer is to lead the design and frontend engineering for early stage startups. Below is a recent project I worked on, where I designed the product, and then used React and Flask to integrate those designs into a consistent user interface.
       </p>
     </div>
     <div class="row">
@@ -189,7 +207,7 @@
     <div class="project_description">
       <h4 class="category">Luca's Jazz Corner</h4>
       <p>
-        <a class="underline_link" href="http://www.lucasjazzcorner.com/" title="Lucas Jazz Corner" target="_blank">Luca’s Jazz Corner</a> is a website that I designed in October of 2016 for a restaurant owner, Luca, who wanted to transform his restarant into a fully functional jazz club. This website serves as a place for customers to go and find information, videos, and photos of artists, find out more about Luca’s Jazz Corner, and also figure out when artists are performing. I'm super proud of the way this website came out, and it has served as an effective, impactful asset to the business's success, which is all I could ask for as a designer. 
+        <a class="underline_link" href="http://www.lucasjazzcorner.com/" title="Lucas Jazz Corner" target="_blank">Luca’s Jazz Corner</a> is a website that I designed in October of 2016 for a restaurant owner, Luca, who wanted to transform his restarant into a fully functional jazz club. This website serves as a place for customers to go and find information, videos, and photos of artists, find out more about Luca’s Jazz Corner, and also figure out when artists are performing. I'm super proud of the way this website came out, and it has served as an effective, impactful asset to the business's success, which is all I could ask for as a designer.
       </p>
     </div>
 
